<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="72dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/imgThumb"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round"
            android:contentDescription="@string/exercise_thumb_cd" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_item_title"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/text_primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_meta_placeholder"
                android:textSize="12sp"
                android:textColor="@color/text_secondary" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
